@@ -5,6 +5,8 @@
 CBackgroundInfoLoader::CBackgroundInfoLoader()
 {
   m_bRunning = false;
+  m_pObserver=NULL;
+  m_pProgressCallback=NULL;
 }
 
 CBackgroundInfoLoader::~CBackgroundInfoLoader()
@@ -31,19 +33,21 @@ void CBackgroundInfoLoader::Process()
     {
       CFileItem* pItem = vecItems[i];
 
+      // Ask the callback if we should abort
+      if (m_pProgressCallback && m_pProgressCallback->Abort())
+        m_bStop=true;
+
       if (m_bStop)
         break;
 
-      // Fill in tag for the item
+      // load the item
       if (!LoadItem(pItem))
         continue;
 
       // Notify observer a item
       // is loaded.
       if (m_pObserver)
-      {
         m_pObserver->OnItemLoaded(pItem);
-      }
     }
 
     OnLoaderFinish();
@@ -64,6 +68,7 @@ void CBackgroundInfoLoader::Load(CFileItemList& items)
   m_pVecItems = &items;
   StopThread();
   Create();
+  m_bRunning = true;
 }
 
 bool CBackgroundInfoLoader::IsLoading()
@@ -74,4 +79,9 @@ bool CBackgroundInfoLoader::IsLoading()
 void CBackgroundInfoLoader::SetObserver(IBackgroundLoaderObserver* pObserver)
 {
   m_pObserver = pObserver;
+}
+
+void CBackgroundInfoLoader::SetProgressCallback(IProgressCallback* pCallback)
+{
+  m_pProgressCallback = pCallback;
 }
